Fixes #1767. Changed blockgrid to clearfix instead of overflow:hidden

--- a/scss/foundation/components/_block-grid.scss
+++ b/scss/foundation/components/_block-grid.scss
@@ -19,9 +19,9 @@ $block-grid-media-queries: true !default;
 
   @if $base-style {
     display: block;
-    overflow: hidden;
     padding: 0;
     margin: 0 (-$spacing);
+    @include clearfix;
 
     &>li {
       display: block;
